@@ -68,13 +68,46 @@ ags_export_window_tact_callback(GtkWidget *spin_button,
 {
   AgsWindow *window;
 
+  AgsMutexManager *mutex_manager;
+
+  gdouble delay_factor;
+  gdouble delay;
+
+  pthread_mutex_t *application_mutex;
+  pthread_mutex_t *soundcard_mutex;
+
+  mutex_manager = ags_mutex_manager_get_instance();
+  application_mutex = ags_mutex_manager_get_application_mutex(mutex_manager);
+
+  /* retrieve window */
+  pthread_mutex_lock(application_mutex);
+  
   window = AGS_XORG_APPLICATION_CONTEXT(export_window->application_context)->window;
 
+  pthread_mutex_unlock(application_mutex);
+
+  /* retrieve soundcard mutex */
+  pthread_mutex_lock(application_mutex);
+
+  soundcard_mutex = ags_mutex_manager_lookup(mutex_manager,
+					     (GObject *) window->soundcard);
+  
+  pthread_mutex_unlock(application_mutex);
+
+  /* get some properties */
+  pthread_mutex_lock(soundcard_mutex);
+
+  delay_factor = ags_soundcard_get_delay_factor(AGS_SOUNDCARD(window->soundcard));
+  delay = ags_soundcard_get_absolute_delay(AGS_SOUNDCARD(window->soundcard));
+
+  pthread_mutex_unlock(soundcard_mutex);
+
+  /* update duration */
   gtk_label_set_text(export_window->duration,
-		     ags_time_get_uptime_from_offset(gtk_spin_button_get_value(export_window->tact) * 16.0,
+		     ags_time_get_uptime_from_offset(gtk_spin_button_get_value(export_window->tact) * 16.0 / (1.0 + delay_factor),
 						     window->navigation->bpm->adjustment->value,
-						     ags_soundcard_get_delay(AGS_SOUNDCARD(window->soundcard)),
-						     ags_soundcard_get_delay_factor(AGS_SOUNDCARD(window->soundcard))));
+						     delay,
+						     delay_factor));
 }
 
 void
@@ -191,7 +224,7 @@ ags_export_window_export_callback(GtkWidget *toggle_button,
     /* start export thread */
     if(success){
       guint tic;
-      gdouble delay;
+      gdouble delay_factor;
       
       pthread_mutex_lock(application_mutex);
 
@@ -203,9 +236,9 @@ ags_export_window_export_callback(GtkWidget *toggle_button,
       pthread_mutex_lock(soundcard_mutex);
 
       /* create task */
-      delay = ags_soundcard_get_delay(AGS_SOUNDCARD(window->soundcard));
+      delay_factor = ags_soundcard_get_delay_factor(AGS_SOUNDCARD(window->soundcard));
 
-      tic = (gtk_spin_button_get_value(export_window->tact) + 1) * 16.0 * delay;
+      tic = ((gtk_spin_button_get_value(export_window->tact) + 1) * (16.0 / delay_factor));
 
       export_output = ags_export_output_new(export_thread,
 					    window->soundcard,
